# realize-mcp

./: .env.example  .gitignore  Dockerfile  README.md  design.md  env.template  plan-report-csv-passthrough.md  pyproject.toml  pytest.ini  requirements.txt  test_api_live.py
scripts/: deploy.py  run-sse.sh  run-streamable-http.sh
src/: __init__.py  config.py  realize_server.py
src/models/: __init__.py
src/realize/: __init__.py  app_metrics.py  auth.py  client.py  config.py  http.py  logger.py  metrics.py  models.py  realize_server.py  sse_keepalive.py
src/tools/: __init__.py  account_handlers.py  auth_handlers.py  campaign_handlers.py  (+3 more)
tests/: __init__.py  conftest.py  test_account_lists.py  test_account_search.py  test_auth_provider.py  test_browser_auth.py  test_campaign_targeting.py  test_core_logic.py  test_create_campaign.py  test_create_campaign_item.py  test_create_display_item.py  test_create_native_item.py  test_deployment.py  test_discovery_search.py  test_display_item_flag.py  test_dynamic_reports.py  test_environment.py  test_error_handling.py  test_errors.py  test_get_account.py  test_integration.py  test_internal_only_middleware.py  test_list_realize_resource.py  test_mcp_protocol.py  test_metrics.py  test_metrics_server.py  test_oauth_context.py  test_oauth_dcr.py  test_oauth_metadata.py  test_oauth_session_auth.py  test_oauth_sse.py  test_oauth_token.py  test_path_encoding.py  test_production.py  test_request_size_limit.py  test_resource_discovery.py  test_sanitize.py  test_sse_keepalive.py  test_streamable_http.py  test_tool_registration.py  (+13 more)
(+45 files in other folders)
